--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
  <h1>I can push code</h1>
  <h2>It's not taht difficult</h2>
  <h3>easy pisssy</h3>
+ <img src="code.jpg" alt="code image"height="100vh">
  
 </body>
 </html>
